fix(mobile): smaller opener on mobile, fix tooltip card position via absolute instead of fixed

--- a/src/ui/components/globe/components/globe-tooltip-card.module.scss
+++ b/src/ui/components/globe/components/globe-tooltip-card.module.scss
@@ -69,7 +69,7 @@
 }
 
 .tooltipMobile {
-	position: fixed;
+	position: absolute;
 	z-index: 50;
 	bottom: 24px;
 	left: 50%;
